# benchmarks

cms-raytrace/: raytrace.ipynb
geant4-validation-app/: .gitignore  CMakeLists.txt  README.md  g4-app.cc  input_example.json  simple_cms.gdml
geant4-validation-app/src/: ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  DetectorHit.cc  DetectorHit.hh  EmCalorimeterSD.cc  EmCalorimeterSD.hh  Event.hh  EventAction.cc  EventAction.hh  HepMC3Reader.cc  HepMC3Reader.hh  JsonReader.cc  JsonReader.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RootIO.cc  RootIO.hh  RootInterfaceLinkDef.hh  RunAction.cc  RunAction.hh  SiTrackerSD.cc  SiTrackerSD.hh  StackingAction.cc  StackingAction.hh  SteppingAction.cc  SteppingAction.hh  TrackerHit.cc  TrackerHit.hh  TrackingAction.cc  TrackingAction.hh
geant4-validation-app/utils/: .gitignore  basic_plots.C  read_events.C
klein-nishina/: .gitignore  CMakeLists.txt  README.md  geant4-celeritas-kn.cc  geant4-kn-app.cc  vis.mac
klein-nishina/celeritas-performance/: analysis-fma.ipynb  analysis.ipynb  driver-fma.py  driver.py  output-track-npt-1.csv  output-track-npt-1.md  output-track-npt-2.csv  output-track-npt-2.md  output-track-npt-4.csv  output-track-npt-4.md  outputfma-trackfma-npt-1.csv  outputfma-trackfma-npt-1.md  outputfma-trackfma-npt-2.csv  outputfma-trackfma-npt-2.md  outputfma-trackfma-npt-4.csv  outputfma-trackfma-npt-4.md  postprocess.py  roofline.py  track-npt-1.json  track-npt-2.json  track-npt-4.json  trackfma-npt-1.json  trackfma-npt-2.json  trackfma-npt-4.json
klein-nishina/celeritas-results/: edep-100MeV-1.0cm.txt  interactor.ipynb  kernel-stats.json  postprocess.ipynb  scaling-cpu.json  scaling-gpu-short.json  scaling.json
klein-nishina/celeritas-results-cpu/: analysis.ipynb  driver.py  host-track-1000.json  host-track-16000.json  host-track-2000.json  host-track-250.json  host-track-4000.json  host-track-500.json  host-track-8000.json  track-1000.json  track-16000.json  track-2000.json  track-250.json  track-4000.json  track-500.json  track-8000.json  track_const-128.json  track_const-256.json  track_const-32.json  track_const-512.json  track_const-64.json
klein-nishina/performance-changes/: analysis.ipynb  runner.py
klein-nishina/performance-changes/0a48e78/: results.json
klein-nishina/performance-changes/2aa6936/: results.json
klein-nishina/performance-changes/2ccd69e/: results.json
klein-nishina/performance-changes/489992c/: results.json
klein-nishina/performance-changes/489992c-reg32/: results.json
klein-nishina/performance-changes/489992c-reg48/: results.json
klein-nishina/performance-changes/489992c-reg64/: results.json
klein-nishina/performance-changes/48e45ec/: results.json
klein-nishina/performance-changes/49cbcd2/: results.json
klein-nishina/performance-changes/4e042b6/: README.md  results.json
klein-nishina/performance-changes/5aca14b/: results.json
klein-nishina/performance-changes/6689fb1/: results.json
klein-nishina/performance-changes/6fd742d/: results.json
klein-nishina/performance-changes/7056d23/: results.json
klein-nishina/performance-changes/781007f/: results.json
klein-nishina/performance-changes/7b35b03/: results.json
klein-nishina/performance-changes/9c9a20f/: results.json
klein-nishina/performance-changes/b334510/: results.json
klein-nishina/performance-changes/b73a69d/: results.json
klein-nishina/performance-changes/d7c4168/: results.json
klein-nishina/performance-changes/ebe3fb3/: results.json
klein-nishina/performance-changes/ebe3fb3-128/: results.json
klein-nishina/performance-changes/ebe3fb3-reg32/: results.json
klein-nishina/performance-changes/ebe3fb3-reg48/: results.json
klein-nishina/performance-changes/ebe3fb3-reg64/: results.json
klein-nishina/performance-changes/ebe3fb3-reg80/: results.json
klein-nishina/performance-changes/f42388c/: results.json
klein-nishina/performance-changes/f9ed81d/: results.json
klein-nishina/plots/: cumulative_energy_z.C  cumulative_z_edep.C  cumulative_z_first.C  energy_deposition_per_bin.C  g4-edep-100MeV-1.0cm.txt  g4-edep-100MeV-60k-1.0cm.txt  g4_celeritas_edep.C  step_length.C
klein-nishina/src/: ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  StackingAction.cc  StackingAction.hh  SteppingAction.cc  SteppingAction.hh  TrackingAction.cc  TrackingAction.hh
klein-nishina/tables/: Lambda.compt.gamma.asc  Lambda.compt.gamma.json  LambdaPrim.compt.gamma.asc  LambdaPrim.compt.gamma.json
klein-nishina/utils/: Event.h  energy_conservation.C  read.C  read_single_vertex.C  root_post_process.C
